modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Gradient Background</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="generate custom css gradients with the click of a button"
-    />
+<head>
+  <title>Gradient Generator</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="Generate custom CSS gradients with the click of a button" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body id="gradient">
-    <div class="container">
-      <h1 class="heading">Gradient Generator</h1>
-      <div class="inputs">
-        <label style="display: flex; align-items: center; gap: 1rem">
-          color 1
-          <input class="color1" type="color" name="color1" value="#B5DDFF" />
-        </label>
-        <label style="display: flex; align-items: center; gap: 1rem">
-          color 2
-          <input class="color2" type="color" name="color2" value="#D998FF" />
-        </label>
-        <br />
-      </div>
-      <button class="btn btn-dark">Generate Randomly</button>
-      <h2>Current CSS Background</h2>
-      <h3></h3>
+  <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body id="gradient">
+  <div class="container">
+    <h1 class="heading">Gradient Generator</h1>
+    <div class="inputs">
+      <label style="display: flex; align-items: center; gap: 1rem">
+        Color 1
+        <input class="color1" type="color" name="color1" value="#B5DDFF" />
+      </label>
+      <label style="display: flex; align-items: center; gap: 1rem">
+        Color 2
+        <input class="color2" type="color" name="color2" value="#D998FF" />
+      </label>
     </div>
+    <button class="btn btn-dark">Generate Randomly</button>
+    <h2>Current CSS Background</h2>
+    <h3></h3>
+  </div>
 
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js"></script>
-  </body>
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"
+  ></script>
+  <script src="script.js"></script>
+</body>
 </html>
